amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-members-extension-union.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-members-extension-union.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
